--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxt/devtools": "latest",
+    "@nuxt/devtools": "^0.8.5",
     "@nuxtjs/google-fonts": "^3.0.2",
     "@nuxtjs/tailwindcss": "^6.8.0",
     "autoprefixer": "^10.4.16",
-    "nuxt": "^3.7.3",
+    "nuxt": "^3.7.4",
     "postcss": "^8.4.30",
     "tailwindcss": "^3.3.3"
   },
   "dependencies": {
-    "@nuxt/content": "^2.8.2"
+    "@nuxt/content": "^2.8.3"
   }
 }
