--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "tailwindcss": "^3.3.3"
   },
   "dependencies": {
-    "@nuxt/content": "^2.8.3"
+    "@nuxt/content": "^2.8.3",
+    "vue-router": "^4.2.5"
   }
 }
