--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxt/devtools": "^0.8.5",
+    "@nuxt/devtools": "^1.0.0-beta.3",
     "@nuxtjs/google-fonts": "^3.0.2",
     "@nuxtjs/tailwindcss": "^6.8.0",
     "@tailwindcss/forms": "^0.5.6",
     "autoprefixer": "^10.4.16",
     "nuxt": "^3.7.4",
-    "postcss": "^8.4.30",
+    "postcss": "^8.4.31",
     "tailwindcss": "^3.3.3"
   },
   "dependencies": {
-    "@nuxt/content": "^2.8.3",
+    "@nuxt/content": "^2.8.5",
     "vue-router": "^4.2.5"
   }
 }
