--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "autoprefixer": "^10.4.16",
     "nuxt": "^3.7.4",
     "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.2.2",
+    "vue-tsc": "^1.8.22"
   },
   "dependencies": {
     "@nuxt/content": "^2.8.5",
