--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/forms": "^0.5.6",
     "autoprefixer": "^10.4.16",
     "nuxt": "^3.7.4",
+    "nuxt-meilisearch": "^1.0.2",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.2.2",
