--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "devDependencies": {
     "@nuxt/devtools": "^1.0.0-beta.3",
     "@nuxtjs/google-fonts": "^3.0.2",
